misc-7 (#210)
* fix invalid transition

* use tolerance + 1 for majority, rather than 2/3+1 in DHT/iterations.

* limit bootstrapping to min of 4. fix RingIterator logic.

* generic gate on view bootstrapping

* prevent state transition errors on failure

* gate view change in KerlDHT

* tighten up the screws

* use majority for observer's view change.

utility for listing network interfaces

* better ViewChange

* better view change, bug fixes, serialize Gorgoneion endorsement

* provide RingIterator functionality on the SliceIterator. virtual synchrony using SI for KerlDHT

* emit last block as beacon if no transactions to publish

* cleanup

* cleanup